Changelog for Shake

    Allow hashable-1.2
0.3.8
    Fix up FilePattern so "foo//bar" ?== "foo/bar"
0.3.7
    Update the cabal file
0.3.6
    Add addOracles, for implementing more advanced oracles
    Add withoutActions, for implementing command line arguments
0.3.5
    #571, vastly improve the correctness of FilePattern
    #574, documentation typos
    Expose rulePriority
0.3.4
    Update documentation with links to ICFP 2012 paper/talk
0.3.3
    Minor refactorings
0.3.2
    Fix cabal specification on non-Windows
0.3.1
    Don't use syntax also stolen by QuasiQuotes
    Avoid warnings about unused monadic values
    Fix up getModificationTime for GHC 7.6
    Don't assume catch is exported by Prelude (GHC 7.6 compat)
    Improve the error message when failing to build with *>> or ?>>
    Introduce a portable flag, to switch to portable FileTime ops
    Improve the error message when failing to build a file
    Ensure errors raised bubble up quickly
    Significant improvements to the profile output
    Only trace the program name by default, not the entire command
    Allow unordered-containers < 0.2 again
    Intern all keys, so they are only stored once
    Optimise modification time checking on Unix
    Optimise modification time checking on Windows
    Make some fields smaller on disk
    IMPORTANT: Incompatible on disk format change
    Switch to ByteString for storing File
    Add shakeDeterministic, along with a default random pool
    Make the Monad/Monoid instance for Rules strict
0.3
    #550, ensure the journal thread is locked
    #550, if your thread dies while reading the database then die
    #550, ensure you reset to before the slop before writing
    If the witness table is completely corrupt give a better error
    Make storage work with exceptions whose messages raise errors
    Journal error conditions, to ensure they don't repeat
    Better messages on invalid database versions
    Complete rewrite of the storage layer and journal design